# aws-ec2-automator

./: .gitignore  LICENSE  README.md  installation.sh  pyproject.toml
EC2Automator/core/: authenticator.py  cost_estimator.py  ec2_automator.py  ec2_cost_estimator.py  ec2_manager.py  logger.py  ssh_config_manager.py  sso_authentication_checker.py  sso_login_handler.py
EC2Automator/gui/: main_gui copy.py  main_gui.py
