[tool.poetry]
name = "aws-ec2-automator"
version = "0.1.0"
description = ""
authors = ["Dae-young Kim <dkim1@childrensnational.org>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8"
paramiko = "^3.5.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.58"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
